@@ -1299,74 +1299,74 @@
 
 /* Interrupt vectors */
 /* Vector 0 is the reset vector */
-#define SIG_INT0                _VECTOR(1)
-#define SIG_INT1                _VECTOR(2)
-#define SIG_INT2                _VECTOR(3)
-#define SIG_INT3                _VECTOR(4)
-#define SIG_INT4                _VECTOR(5)
-#define SIG_INT5                _VECTOR(6)
-#define SIG_INT6                _VECTOR(7)
-#define SIG_INT7                _VECTOR(8)
-#define SIG_PCINT0              _VECTOR(9)
-#define SIG_PCINT1              _VECTOR(10)
+#define SIG_INTERRUPT0          _VECTOR(1)
+#define SIG_INTERRUPT1          _VECTOR(2)
+#define SIG_INTERRUPT2          _VECTOR(3)
+#define SIG_INTERRUPT3          _VECTOR(4)
+#define SIG_INTERRUPT4          _VECTOR(5)
+#define SIG_INTERRUPT5          _VECTOR(6)
+#define SIG_INTERRUPT6          _VECTOR(7)
+#define SIG_INTERRUPT7          _VECTOR(8)
+#define SIG_PIN_CHANGE0		_VECTOR(9)
+#define SIG_PIN_CHANGE1		_VECTOR(10)
 #if defined(__ATmegaxx0__)
-# define SIG_PCINT2             _VECTOR(11)
+# define SIG_PIN_CHANGE2	_VECTOR(11)
 #endif /* __ATmegaxx0__ */
-#define SIG_WDT                 _VECTOR(12)
-#define SIG_TIMER2_COMPA        _VECTOR(13)
-#define SIG_TIMET2_COMPB        _VECTOR(14)
-#define SIG_TIMER2_OVF          _VECTOR(15)
-#define SIG_TIMER1_CAPT         _VECTOR(16)
-#define SIG_TIMER1_COMPA        _VECTOR(17)
-#define SIG_TIMER1_COMPB        _VECTOR(18)
-#define SIG_TIMER1_COMPC        _VECTOR(19)
-#define SIG_TIMER1_OVF          _VECTOR(20)
-#define SIG_TIMER0_COMPA        _VECTOR(21)
-#define SIG_TIMER0_COMPB        _VECTOR(22)
-#define SIG_TIMER0_OVF          _VECTOR(23)
-#define SIG_SPI_STC             _VECTOR(24)
-#define SIG_USART0_RX           _VECTOR(25)
-#define SIG_USART0_UDRE         _VECTOR(26)
-#define SIG_USART0_TX           _VECTOR(27)
-#define SIG_ANALOG_COMP         _VECTOR(28)
+#define SIG_WATCHDOG_TIMEOUT	_VECTOR(12)
+#define SIG_OUTPUT_COMPARE2A	_VECTOR(13)
+#define SIG_OUTPUT_COMPARE2B	_VECTOR(14)
+#define SIG_OVERFLOW2		_VECTOR(15)
+#define SIG_INPUT_CAPTURE1	_VECTOR(16)
+#define SIG_OUTPUT_COMPARE1A	_VECTOR(17)
+#define SIG_OUTPUT_COMPARE1B	_VECTOR(18)
+#define SIG_OUTPUT_COMPARE1C	_VECTOR(19)
+#define SIG_OVERFLOW1		_VECTOR(20)
+#define SIG_OUTPUT_COMPARE0A	_VECTOR(21)
+#define SIG_OUTPUT_COMPARE0B	_VECTOR(22)
+#define SIG_OVERFLOW0		_VECTOR(23)
+#define SIG_SPI			_VECTOR(24)
+#define SIG_USART0_RECV         _VECTOR(25)
+#define SIG_USART0_DATA         _VECTOR(26)
+#define SIG_USART0_TRANS        _VECTOR(27)
+#define SIG_COMPARATOR		_VECTOR(28)
 #define SIG_ADC                 _VECTOR(29)
 #define SIG_EEPROM_READY        _VECTOR(30)
-#define SIG_TIMER3_CAPT         _VECTOR(31)
-#define SIG_TIMER3_COMPA        _VECTOR(32)
-#define SIG_TIMER3_COMPB        _VECTOR(33)
-#define SIG_TIMER3_COMPC        _VECTOR(34)
-#define SIG_TIMER3_OVF          _VECTOR(35)
-#define SIG_USART1_RX           _VECTOR(36)
-#define SIG_USART1_UDRE         _VECTOR(37)
-#define SIG_USART1_TX           _VECTOR(38)
-#define SIG_TWI                 _VECTOR(39)
+#define SIG_INPUT_CAPTURE3      _VECTOR(31)
+#define SIG_OUTPUT_COMPARE3A    _VECTOR(32)
+#define SIG_OUTPUT_COMPARE3B    _VECTOR(33)
+#define SIG_OUTPUT_COMPARE3C    _VECTOR(34)
+#define SIG_OVERFLOW3           _VECTOR(35)
+#define SIG_USART1_RECV         _VECTOR(36)
+#define SIG_USART1_DATA         _VECTOR(37)
+#define SIG_USART1_TRANS        _VECTOR(38)
+#define SIG_2WIRE_SERIAL	_VECTOR(39)
 #define SIG_SPM_READY           _VECTOR(40)
-#if defined(__ATmegaxx0__) 
-# define SIG_TIMER4_CAPT        _VECTOR(41)
+#if defined(__ATmegaxx0__)
+# define SIG_INPUT_CAPTURE4	_VECTOR(41)
 #endif /* __ATmegaxx0__ */
-#define SIG_TIMER4_COMPA        _VECTOR(42)
-#define SIG_TIMER4_COMPB        _VECTOR(43)
-#define SIG_TIMER4_COMPC        _VECTOR(44)
-#define SIG_TIMER4_OVF          _VECTOR(45)
-#if defined(__ATmegaxx0__) 
-# define SIG_TIMER5_CAPT        _VECTOR(46)
+#define SIG_OUTPUT_COMPARE4A	_VECTOR(42)
+#define SIG_OUTPUT_COMPARE4B	_VECTOR(43)
+#define SIG_OUTPUT_COMPARE4C	_VECTOR(44)
+#define SIG_OVERFLOW4		_VECTOR(45)
+#if defined(__ATmegaxx0__)
+# define SIG_INPUT_CAPTURE5	_VECTOR(46)
 #endif /* __ATmegaxx0__ */
-#define SIG_TIMER5_COMPA        _VECTOR(47)
-#define SIG_TIMER5_COMPB        _VECTOR(48)
-#define SIG_TIMER5_COMPC        _VECTOR(49)
-#define SIG_TIMER5_OVF          _VECTOR(50)
+#define SIG_OUTPUT_COMPARE5A	_VECTOR(47)
+#define SIG_OUTPUT_COMPARE5B	_VECTOR(48)
+#define SIG_OUTPUT_COMPARE5C	_VECTOR(49)
+#define SIG_OVERFLOW5		_VECTOR(50)
 
-#if defined(__ATmegaxx1__) 
+#if defined(__ATmegaxx1__)
 
 # define _VECTORS_SIZE 204
 
-#else 
-# define SIG_USART2_RX          _VECTOR(51)
-# define SIG_USART2_UDRE        _VECTOR(52)
-# define SIG_USART2_TX          _VECTOR(53)
-# define SIG_USART3_RX          _VECTOR(54)
-# define SIG_USART3_UDRE        _VECTOR(55)
-# define SIG_USART3_TX          _VECTOR(56)
+#else
+# define SIG_USART2_RECV	_VECTOR(51)
+# define SIG_USART2_DATA	_VECTOR(52)
+# define SIG_USART2_TRANS	_VECTOR(53)
+# define SIG_USART3_RECV	_VECTOR(54)
+# define SIG_USART3_DATA	_VECTOR(55)
+# define SIG_USART3_TRANS	_VECTOR(56)
 
 # define _VECTORS_SIZE 228
 
